--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
     "@pinia/nuxt": "^0.5.1",
+    "@vueuse/core": "^10.7.1",
     "axios": "^1.6.3",
     "lodash": "^4.17.21",
     "nuxt": "^3.9.0",
