--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@iconify/vue": "^4.1.1",
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.7.1",
+    "@vueuse/integrations": "^10.7.1",
     "axios": "^1.6.3",
     "lodash": "^4.17.21",
     "nuxt": "^3.9.0",
